# CRISPv2.9.5

./: .editorconfig  .gitattributes  .gitignore  README.md  conftest.py  pyproject.toml  uv.toml
.claude/: settings.json
attic/: README.md
audit/: realdata_full_run_contract_check_2026-04-06.md  roadmap_status_v2.9.5.md  smoke_config_semantic_drift.json  smoke_config_semantic_drift.md  v2.9.5_ci_required_matrix.md  v2.9.5_rc1_release_audit.md  v2.9.5_rc2_hosted_ci_verification_2026-04-06.md  v2.9.5_rc2_release_bundle.md  v2.9.5_rc2_release_note.md  v2.9.5_rc2_representative_full_run_contract_check_2026-04-06.md  v2.9.5_required_matrix_dryrun.md
configs/: 9kr6_cys328.benchmark.yaml  9kr6_cys328.lowsampling.yaml  9kr6_cys328.production.yaml  9kr6_cys328.smoke.yaml  9kr6_cys328.yaml
crisp/: __init__.py
docs/: 9kr6_benchmark_contract.md  CRISP_v3x_semantic_design_SOT_RC.md  CRISP_v3x_semantic_design_SOT_RC_rev1.md  README.md  adr_v3_10_full_migration_contract.md  adr_v3_11_m2_authority_transfer.md  comparable_channels_semantics.md  pr05_30run_tracking.md  pr05_pre_merge_gate.md  rule3_proposal_connected_adr.md  v0.1.0_release_freeze_check.md  v0.1.0_release_roadmap.md  v0.1.0_releaseable_close.md  v2.9.5_implementation_roadmap.md  v2.9.5_manifest_inventory_schema_freeze.md  v2.9.5_rc_checklist.md  v2.9.5_sidecar_artifact_policy.md  v3_05_bridge_drift_policy.md  v3_07_rule3_catalytic_contract_freeze.md  v3_artifact_budget.md  v3_catalytic_public_representation_freeze.md  v3_clean_code_audit.md  v3_current_boundary.md  v3_deferred_appendix.md  v3_keep_path_rc_roadmap.md  (+27 more)
(+408 files in other folders)
