[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crisp"
version = "0.1.0"
description = "CRISP research pipeline"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "biopython>=1.86,<1.87",
  "numpy>=2.3.1,<3",
  "pandas>=2.3.1,<3",
  "pyarrow>=23.0.0,<24",
  "pyyaml>=6.0.3,<7",
  "rdkit>=2025.3.3,<2026",
  "scipy>=1.16.0,<2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["crisp*"]

[tool.uv]
default-groups = ["dev"]
environments = [
  "implementation_name == 'cpython' and sys_platform == 'win32'",
  "implementation_name == 'cpython' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and sys_platform == 'darwin' and platform_machine == 'arm64'",
]
required-environments = [
  "implementation_name == 'cpython' and sys_platform == 'win32'",
  "implementation_name == 'cpython' and sys_platform == 'darwin' and platform_machine == 'x86_64'",
  "implementation_name == 'cpython' and sys_platform == 'darwin' and platform_machine == 'arm64'",
]
